fix: auto-size on small screen
part of a commit - static assets not built

--- a/src/scss/kratosr.scss
+++ b/src/scss/kratosr.scss
@@ -1440,6 +1440,10 @@ ul.kratos-post-meta {
   }
 }
 
+.col-md-8 {
+  width: 100%;
+}
+
 .kratos-post-content {
   word-break: break-word;
   word-wrap: break-word;
